updated properties file

--- a/propertycheck/pom.xml
+++ b/propertycheck/pom.xml
@@ -83,8 +83,18 @@
             <artifactId>spring-security-taglibs</artifactId>
             <version>6.0.2</version>
         </dependency>
-		
-	<!--Other-->
+		<!--JSTL Tags-->
+		<dependency>
+			<groupId>jakarta.servlet.jsp.jstl</groupId>
+			<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		<!--Other-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
