--- a/propertycheck/pom.xml
+++ b/propertycheck/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.0.2</version>
+		<version>3.0.6</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.kapelle</groupId>
@@ -40,9 +40,10 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		 <dependency> 
+		<dependency> 
 			<groupId>mysql</groupId>  
-			<artifactId>mysql-connector-java</artifactId>  
+			<artifactId>mysql-connector-java</artifactId> 
+			<version>8.0.33</version>
 			<scope>runtime</scope> 
 		 </dependency>
 		 <!--JSP-->
@@ -94,6 +95,11 @@
 			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
 			<version>3.0.0</version>
 		</dependency>
+		<!--Websocket-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-websocket</artifactId>
+		</dependency>
 		<!--Other-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -112,5 +118,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
