--- a/propertycheck/src/main/resources/application.properties
+++ b/propertycheck/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
 
 #Local db
-spring.datasource.driverClassName = com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/propertycheck
 spring.datasource.username = root
 spring.datasource.password = Root@2023
@@ -14,4 +14,6 @@ spring.datasource.password = Root@2023
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 logging.level.org.springframework.jdbc.core=DEBUG
+
+spring.cache.type=none
 
