--- a/tradezonemarket/src/main/resources/application.properties
+++ b/tradezonemarket/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.mvc.view.suffix: .jsp
 
 #Local db
 spring.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/propertycheck
+spring.datasource.url = jdbc:mysql://localhost:3306/tradezonemarket
 spring.datasource.username = root
 spring.datasource.password = Root@2023
 
