--- a/tradezonemarket/pom.xml
+++ b/tradezonemarket/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.1.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.kapelle.inc</groupId>
+	<groupId>com.kapelles.inc</groupId>
 	<artifactId>tradezonemarket</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>tradezonemarket</name>
